k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksbsample-deployment
  labels:
    app: ksbsample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ksbsample
  template:
    metadata:
      labels:
        app: ksbsample
    spec:
      containers:
      - name: ksbsample
        image: tranchida/ksbsample:1.0.0
        imagePullPolicy: "Always"
        #image: busybox
        #command:
        #  - "sh"
        #  - "-c"
        #  - "while true; do sleep 6000; done"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /conf
        resources:
          requests:
            cpu: 500m
            memory: 200Mi
          limits:
            cpu: "1"
            memory: 200Mi
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: ksbsample-environment
