k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksbsample-ingress
spec:
  rules:
  - host: test.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ksbsample-service
            port:
              number: 8080
